--- a/templates/components/_flashcard_item.html
+++ b/templates/components/_flashcard_item.html
@@ -65,7 +65,7 @@
                       class="form-control form-control-sm"
                       rows="2">{{ fc.answer }}</textarea>
           </div>
-          <div class="d-flex justify-content-between align-items-center">
+          <div class="d-flex justify-content-between align-items-center w-100">
             <div class="d-flex align-items-center gap-2">
               <label class="form-label small mb-0">Order</label>
               <input type="number" name="order"
