--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -117,7 +117,7 @@
     <div class="card p-4 h-100">
         <h4 class="fw-bold">Start Learning</h4>
         <p class="text-muted">Dive into your medical materials and start your journey.</p>
-        <a href="{% url 'materials_home' %}" class="btn btn-primary mt-auto">Browse Materials</a>
+        <a href="{% url 'web_materials_home' %}" class="btn btn-primary mt-auto">Browse Materials</a>
     </div>
     {% endif %}
   </div>
